--- a/index.html
+++ b/index.html
@@ -3099,7 +3099,7 @@ if (HTMLWidgets.shinyMode){
 //--------------------------------------------------------------- 
 HTMLWidgets.widget({
   
-  name: 'Network',
+  name: 'visNetwork',
   
   type: 'output',
   
